Package_Tools/include-C/libnm/in_arbeit/h/nm_client.h

#define __NM_CLIENT_H__
#define NM_TYPE_CLIENT            (nm_client_get_type())
#define NM_CLIENT(obj)            (G_TYPE_CHECK_INSTANCE_CAST((obj), NM_TYPE_CLIENT, NMClient))
#define NM_CLIENT_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST((klass), NM_TYPE_CLIENT, NMClientClass))
#define NM_IS_CLIENT(obj)         (G_TYPE_CHECK_INSTANCE_TYPE((obj), NM_TYPE_CLIENT))
#define NM_IS_CLIENT_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE((klass), NM_TYPE_CLIENT))
#define NM_CLIENT_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS((obj), NM_TYPE_CLIENT, NMClientClass))
#define NM_CLIENT_ERROR nm_client_error_quark()
GQuark nm_client_error_quark(void);
/**
 * NMClient:
 *
 * NMClient contains a cache of the objects of NetworkManager's D-Bus API.
 * It uses #GMainContext and #GDBusConnection for that and registers to
 * D-Bus signals. That means, when iterating the associated #GMainContext,
 * D-Bus signals gets processed and the #NMClient instance updates and
 * emits #GObject signals.
 */
typedef struct _NMClient      NMClient;
typedef struct _NMClientClass NMClientClass;
GType nm_client_get_type(void);
extern
void nm_client_checkpoint_adjust_rollback_timeout(NMClient           *client,
                                                  const char         *checkpoint_path,
                                                  guint32             add_timeout,
                                                  GCancellable       *cancellable,
                                                  GAsyncReadyCallback callback,
                                                  gpointer            user_data);
extern
gboolean nm_client_checkpoint_adjust_rollback_timeout_finish(NMClient     *client,
                                                             GAsyncResult *result,
                                                             GError      **error);
extern
void nm_client_reload(NMClient            *client,
                      NMManagerReloadFlags flags,
                      GCancellable        *cancellable,
                      GAsyncReadyCallback  callback,
                      gpointer             user_data);
extern
gboolean nm_client_reload_finish(NMClient *client, GAsyncResult *result, GError **error);
/*****************************************************************************/

extern
void nm_client_dbus_call(NMClient           *client,
                         const char         *object_path,
                         const char         *interface_name,
                         const char         *method_name,
                         GVariant           *parameters,
                         const GVariantType *reply_type,
                         int                 timeout_msec,
                         GCancellable       *cancellable,
                         GAsyncReadyCallback callback,
                         gpointer            user_data);
extern
GVariant *nm_client_dbus_call_finish(NMClient *client, GAsyncResult *result, GError **error);
extern
void nm_client_dbus_set_property(NMClient           *client,
                                 const char         *object_path,
                                 const char         *interface_name,
                                 const char         *property_name,
                                 GVariant           *value,
                                 int                 timeout_msec,
                                 GCancellable       *cancellable,
                                 GAsyncReadyCallback callback,
                                 gpointer            user_data);
extern
gboolean nm_client_dbus_set_property_finish(NMClient *client, GAsyncResult *result, GError **error);
/*****************************************************************************/

void nm_utils_print(int output_mode, const char *msg);
gboolean nm_utils_file_is_certificate(const char *filename);
gboolean nm_utils_file_is_private_key(const char *filename, gboolean *out_encrypted);
gboolean nm_utils_file_is_pkcs12(const char *filename);
/*****************************************************************************/

extern
void nm_client_wait_shutdown(NMClient           *client,
                             gboolean            integrate_maincontext,
                             GCancellable       *cancellable,
                             GAsyncReadyCallback callback,
                             gpointer            user_data);
extern
gboolean nm_client_wait_shutdown_finish(GAsyncResult *result, GError **error);