Package_Tools/include-C/libnm/in_arbeit/pp/nm-client.pp

(* Const before type ignored *)
procedure nm_client_checkpoint_adjust_rollback_timeout(client:PNMClient; checkpoint_path:Pchar; add_timeout:Tguint32; cancellable:PGCancellable; callback:TGAsyncReadyCallback; 
            user_data:Tgpointer);cdecl;external;
function nm_client_checkpoint_adjust_rollback_timeout_finish(client:PNMClient; result:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
procedure nm_client_reload(client:PNMClient; flags:TNMManagerReloadFlags; cancellable:PGCancellable; callback:TGAsyncReadyCallback; user_data:Tgpointer);cdecl;external;
function nm_client_reload_finish(client:PNMClient; result:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
{*************************************************************************** }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure nm_client_dbus_call(client:PNMClient; object_path:Pchar; interface_name:Pchar; method_name:Pchar; parameters:PGVariant; 
            reply_type:PGVariantType; timeout_msec:longint; cancellable:PGCancellable; callback:TGAsyncReadyCallback; user_data:Tgpointer);cdecl;external;
function nm_client_dbus_call_finish(client:PNMClient; result:PGAsyncResult; error:PPGError):PGVariant;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure nm_client_dbus_set_property(client:PNMClient; object_path:Pchar; interface_name:Pchar; property_name:Pchar; value:PGVariant; 
            timeout_msec:longint; cancellable:PGCancellable; callback:TGAsyncReadyCallback; user_data:Tgpointer);cdecl;external;
function nm_client_dbus_set_property_finish(client:PNMClient; result:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
{*************************************************************************** }
(* Const before type ignored *)
procedure nm_utils_print(output_mode:longint; msg:Pchar);cdecl;external;
(* Const before type ignored *)
function nm_utils_file_is_certificate(filename:Pchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
function nm_utils_file_is_private_key(filename:Pchar; out_encrypted:Pgboolean):Tgboolean;cdecl;external;
(* Const before type ignored *)
function nm_utils_file_is_pkcs12(filename:Pchar):Tgboolean;cdecl;external;
{*************************************************************************** }
procedure nm_client_wait_shutdown(client:PNMClient; integrate_maincontext:Tgboolean; cancellable:PGCancellable; callback:TGAsyncReadyCallback; user_data:Tgpointer);cdecl;external;
function nm_client_wait_shutdown_finish(result:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
{$endif}
{ __NM_CLIENT_H__  }

implementation

{ was #define dname def_expr }
function NM_TYPE_CLIENT : longint; { return type might be wrong }
  begin
    NM_TYPE_CLIENT:=nm_client_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_CLIENT(obj : longint) : longint;
begin
  NM_CLIENT:=G_TYPE_CHECK_INSTANCE_CAST(obj,NM_TYPE_CLIENT,NMClient);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_CLIENT_CLASS(klass : longint) : longint;
begin
  NM_CLIENT_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,NM_TYPE_CLIENT,NMClientClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_IS_CLIENT(obj : longint) : longint;
begin
  NM_IS_CLIENT:=G_TYPE_CHECK_INSTANCE_TYPE(obj,NM_TYPE_CLIENT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_IS_CLIENT_CLASS(klass : longint) : longint;
begin
  NM_IS_CLIENT_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,NM_TYPE_CLIENT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function NM_CLIENT_GET_CLASS(obj : longint) : longint;
begin
  NM_CLIENT_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,NM_TYPE_CLIENT,NMClientClass);
end;

{ was #define dname def_expr }
function NM_CLIENT_ERROR : longint; { return type might be wrong }
  begin
    NM_CLIENT_ERROR:=nm_client_error_quark;
  end;


end.
